<resources>
    <string name="app_name">Cashier</string>
    <string name="hint1">name</string>
    <string name="nameCus">Name Customer</string>
    <string name="customer">Customer</string>
    <string name="item_label">Item Name</string>
    <string name="number_of_items_label">Number of Items</string>
    <string name="price_label">Price</string>
    <string name="money_paid_label">Money Paid</string>
    <string name="btn_process_text">Proses</string>
    <string name="btn_delete_text">Delete</string>
    <string name="btn_close_text">Close</string>
    <string name="inputName">input name</string>
    <string name="inputItemLabel">input item label</string>
    <string name="inputNumberOfItems">input number of items</string>
    <string name="inputPrice">input price</string>
    <string name="inputMoneyPaid">input money paid</string>
    <string name="btn_add_to_cart">add to cart</string>
    <string name="order_label">Pesanan</string>
    <string name="name_label">Nama</string>
    <string name="money_payed_label">Uang bayar</string>
    <string name="cart_label">Keranjang Belanja</string>
    <string name="btn_pay_text">Pay</string>
    <string name="money_payed_default_text">Belum membayar</string>
    <string name="default_text">-</string>
    <string name="total_default_text">Belum ada barang di keranjang</string>
    <string name="bonus_1_text">Bonus : HardDisk 1TB</string>
    <string name="bonus_2_text">Bonus : Keyboard Gaming</string>
    <string name="bonus_3_text">Bonus : Mouse Gaming</string>
    <string name="no_bonus_text">Bonus : Tidak ada bonus</string>
    <string name="change_money_notes">Keterangan : Tunggu kembalian</string>
</resources>
