<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:id="@+id/rlMain"
        >

<!--        nama pelanggan == customer-->
        <TextView
            android:id="@+id/tvCustomer"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:labelFor="@+id/etCustomer"
            android:text="@string/customer"/>

        <EditText
            android:id="@+id/etCustomer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignBottom="@+id/tvCustomer"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/tvCustomer"
            android:autofillHints="@string/inputName"
            android:inputType="text"
            tools:ignore="DuplicateSpeakableTextCheck" />

<!--        nama barang == ItemLabel -->
        <TextView
            android:id="@+id/tvItemLabel"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_below="@+id/tvCustomer"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp"
            android:text="@string/item_label"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etItemLabel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_toEndOf="@+id/tvItemLabel"
            android:layout_alignTop="@+id/tvItemLabel"
            android:layout_marginStart="4dp"
            android:autofillHints="@string/inputItemLabel"
            android:inputType="text"
            tools:ignore="DuplicateSpeakableTextCheck"/>

<!--        jumlah barang == NumberOfItems-->
        <TextView
            android:id="@+id/tvNumberOfItems"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_below="@+id/tvItemLabel"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:text="@string/number_of_items_label"
            android:labelFor="@+id/etNumberOfItems"/>

            <EditText
                android:id="@+id/etNumberOfItems"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignTop="@id/tvNumberOfItems"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/tvNumberOfItems"
                android:autofillHints="@string/inputNumberOfItems"
                android:inputType="number"
                tools:ignore="DuplicateSpeakableTextCheck" />

<!--        harga barang == Price-->
        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tvNumberOfItems"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:labelFor="@id/etPrice"
            android:text="@string/price_label"/>

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignTop="@id/tvPrice"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/tvPrice"
                android:autofillHints="@string/inputPrice"
                android:inputType="numberSigned|numberDecimal"
                tools:ignore="DuplicateSpeakableTextCheck" />

<!--        jumlah uang == MoneyPaid-->
        <TextView
            android:id="@+id/tvMoneyPaid"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tvPrice"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:labelFor="@id/etMoneyPaid"
            android:text="@string/money_paid_label"/>

            <EditText
                android:id="@+id/etMoneyPaid"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignTop="@id/tvMoneyPaid"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/tvMoneyPaid"
                android:autofillHints="@string/inputMoneyPaid"
                android:inputType="numberSigned|numberDecimal"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnProceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMoneyPaid"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bg_button"
                android:text="@string/btn_process_text"
                android:textColor="@android:color/white" />

            <View
                android:id="@+id/vDividerLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/btnProceed"
                android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/vDividerLine"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvItemCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tvCustomerName"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNumberOfItemsCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tvItemCart"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPriceCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tvNumberOfItemsCart"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMoneyPaidCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tvPriceCart"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tvMoneyPaidCart"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tvTotal"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tvChanges"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBonus"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDescription"
            android:layout_alignStart="@id/btnProceed"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_warning"
            android:text="@string/btn_delete_text"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/red"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btnDelete"
            android:layout_toEndOf="@id/btnDelete"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_button_warning"
            app:backgroundTint="@color/red"
            android:text="@string/btn_close_text"
            android:textColor="@android:color/white" />



        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btnDelete"
            android:layout_alignEnd="@id/btnProceed"
            android:background="@drawable/bg_button"
            android:text="@string/btn_add_to_cart"
            android:textColor="@android:color/white" />

        <View
            android:id="@+id/top_0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/btnAddToCart"
            android:layout_marginTop="6dp"
            android:background="@color/colorPrimary" />

    </RelativeLayout>
</ScrollView>